Blog page added and bug fixed.

--- a/blog.qmd
+++ b/blog.qmd
@@ -1,10 +1,10 @@
 ---
-title: "Welcome to my blog"
+title: "Blog"
 ---
 
 Here you'll find field-related content written by me.
 
-# The Inner Join of Electrical Engineering and Data Science
+## The Inner Join of Electrical Engineering and Data Science
 <https://>
 
 
