--- a/index.qmd
+++ b/index.qmd
@@ -17,10 +17,4 @@ about:
       href: mailto:jorgethomasm@ieee.org 
 ---
 
-This is a Quarto website.
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-
-```{r}
-1 + 1
-```
+This is a website.
