WIP note added. Projects reorganised.

--- a/blog.qmd
+++ b/blog.qmd
@@ -2,6 +2,8 @@
 title: "Blog"
 ---
 
+🚧🚧🚧🚧🚧 (WIP)
+
 Here you'll find field-related content written by me.
 
 ## The Inner Join of Electrical Engineering and Data Science
