--- a/projects.qmd
+++ b/projects.qmd
@@ -2,20 +2,29 @@
 title: "Projects"
 ---
 
+🚧🚧🚧🚧🚧 (WIP)
+
+# Supervised Learning
+
 ## Machine Learning
-It is known that the most common type of dataset found in the industry is the **tabular** one.
-
-### Supervised Learning:
-#### [Multivariate Regression with Visual Analytics](https://jorgethomasm.github.io/Ames-house-prices-prediction/HousePrices.html){target="_blank"}
-In this classic Kaggle project you will see my workflow developing pipelines on the ETL phase of the DS cycle, as well as a tidy approach on the exploratory data analysis substantialy supported on Visual Analytics.
-
-### Unsupervised Learning:
-#### Clustering daily load profiles on time-series data
-Very often we have to do some ML for ML. Yes, that is performing some auto-labelling or at least identify some possible ones. In this professional problem...
+### [Advanced Regression Techniques with Visual Analytics](https://jorgethomasm.github.io/Ames-house-prices-prediction/HousePrices.html){target="_blank"}
+In this classic Kaggle project you will **follow my workflow**, qith tips along the way, developing pipelines on the Extract-Transform-Load phase of the Data Science cycle, as well as a tidy approach on the exploratory data analysis substantialy supported on Visual Analytics.
 
 ## Deep Learning
-For datasets with high signal-to-noise ratio like image recognition and language translation, DL methods are the best.
+It is known that the most common type of dataset found in the industry is the **tabular** one. In this  regard ML and non-parametric, enssemble methods like XGBOOST are king.
 
-## Data Visualisation
-### E2E Dashboards with Tableau
-Click [here](https://public.tableau.com/app/profile/iosb.mrd/viz/DynOpt-En-DemoLoerrach/Monitoring){target="_blank"} to see the dashboards on the Tableau Public website.
+However, for datasets with high signal-to-noise (SNR) ratio like image recognition and language translation, DL methods are the best.
+
+# Unsupervised Learning
+Discovering patterns in the supplied feature space.
+
+Very often we have to do some ML for ML. Yes, that is performing some auto-labelling or at least identify some possible ones. In this professional problem...
+
+## Machine Learning:
+### [Hierarchical clustering of daily load profiles of time-series data](https://github.com/jorgethomasm/HOME-Timeseries_Clustering_of_Daily_Profiles/wiki#which-daily-heat-demand-pattern-shape-belongs-to-which-mean-daily-ambient-temperature)
+
+# Data Visualisation
+## Dashboarding
+### [Using Tableau for IoT-Dashboard and Energy Management](https://public.tableau.com/app/profile/iosb.mrd/viz/DynOpt-En-DemoLoerrach/Monitoring){target="_blank"}
+
+In this project, part of.... 
