--- a/blog.qmd
+++ b/blog.qmd
@@ -2,9 +2,9 @@
 title: "Blog"
 ---
 
-🚧🚧🚧🚧🚧 (WIP)
+🚧 (wip)
 
-Here you'll find field-related content written by me.
+Here you'll find linkd to field-related content written by me.
 
 ## The Inner Join of Electrical Engineering and Data Science
 <https://>
