Link added to the AI project management presentation.

--- a/about.qmd
+++ b/about.qmd
@@ -34,7 +34,7 @@ Dipl.-Ing. Electrical Engineering, VE (2000-2006)
 
 ## Scientific Publications
 
-Click on my [ORCiD](https://orcid.org/0000-0001-8844-8421){target="_blank"} to see the list of my papers to date.
+Click on my [ORCiD](https://orcid.org/0000-0001-8844-8421){target="_blank"} to see a list of my papers to date.
 
 ## Languages
 - Spanish (Native Language)
