--- a/mypapers.bib
+++ b/mypapers.bib
@@ -87,8 +87,7 @@
 
 @inproceedings{Thomas2015,
     author = {Thomas, Jorge and Munzke, Nina},
-    booktitle = {31st European Photovoltaic Solar Energy Conference and Exhibition},
-    file = {:C$\backslash$:/Users/ms7508/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Thomas, Munzke - 2015 - A Static Solar-Tracking Configuration for PV Power Plant to Redistribute the Daily Power Supply.pdf:pdf},
+    booktitle = {31st European Photovoltaic Solar Energy Conference and Exhibition},    
     isbn = {3-936338-39-6},
     pages = {76344},
     title = {{A Static Solar-Tracking Configuration for PV Power Plant to Redistribute the Daily Power Supply}},
@@ -99,8 +98,7 @@
 @inproceedings{Aparicio2008,
     author = {Aparicio, L. E. and Thomas, J. A.},
     booktitle = {2008 IEEE/PES Transmission and Distribution Conference and Exposition: Latin America},
-    doi = {10.1109/TDC-LA.2008.4641865},
-    file = {:C$\backslash$:/Users/ms7508/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Aparicio, Thomas - 2008 - Stochastic reliability study of the western 765, 400 and 230 kV transmission lines maintained by EDELCA.pdf:pdf},
+    doi = {10.1109/TDC-LA.2008.4641865},     
     isbn = {978-1-4244-2217-3},
     keywords = {Adverse weather conditions,Markov processes,Power transmission line,Power transmission maintenance,Reliability},
     month = {aug},
@@ -114,8 +112,7 @@
 @inproceedings{Thomas2008,
     author = {Thomas, J. A. and Aparicio, L. E.},
     booktitle = {2008 IEEE/PES Transmission and Distribution Conference and Exposition: Latin America},
-    doi = {10.1109/TDC-LA.2008.4641866},
-    file = {:C$\backslash$:/Users/ms7508/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Thomas, Aparicio - 2008 - Stochastic reliability study of the western transmission substations maintained by EDELCA.pdf:pdf},
+    doi = {10.1109/TDC-LA.2008.4641866},    
     isbn = {978-1-4244-2217-3},
     keywords = {Database,Maintenance policy,Minimal cut sets,Reliability,Reliability block equations,Substation},
     month = {aug},
@@ -125,3 +122,10 @@
     url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=4641866},
     year = {2008}
 } 
+
+@online{orcid, 
+    title = {Check my ORCiD},
+    author = {},
+    year = {},
+    url = {https://orcid.org/0000-0001-8844-8421},
+    urldate = {} }
